Edit home page to present better visuals

--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -17,13 +17,13 @@
             <p>ETA Gaming</p>
             <nav>
                 <ul>
-                    <li><a href="#">Genres</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Developers</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">References</a></li>
+                    <li><a href="#"><span>News</span></a></li>
+                    <li><a href="#"><span>Genres</span></a></li>
+                    <li><a href="#"><span>Events</span></a></li>
+                    <li><a href="#"><span>About</span></a></li>
+                    <li><a href="#"><span>Developers</span></a></li>
+                    <li><a href="#"><span>Contact Us</span></a></li>
+                    <li><a href="#"><span>References</span></a></li>
                 </ul>
             </nav>
         </header>
@@ -38,34 +38,68 @@
             </div>
 
             <div id="intro">
-                <h1>Welcome to ETA Gaming</h1>
+                <h1 class="welcome-heading">Welcome to ETA Gaming</h1>
                 <blockquote>
-                    <p>Where every click begins a quest</p>
+                    <p class="welcome-tagline">Where every click begins a quest</p>
                 </blockquote>
             </div>
         </main>
 
         <footer id="footer">
-            <div>
+            <div class="eta-footer">
+                <br><br><br><br>
                 <p>&copy;ETA Gaming</p>
             </div>
 
             <div>
                 <p>Emmanuel Ayobanjo</p>
                 <p>3173959</p>
-                <p><a href="mailto:emmanuelayomikun.ayobanjo@student.griffith.ie">Email Me</a></p>
+                <p>
+                    <a href="mailto:emmanuelayomikun.ayobanjo@student.griffith.ie">
+                        Email Me
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
+                            <path
+                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
+                            <path
+                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
+                        </svg>
+                    </a>
+                </p>
             </div>
 
             <div>
                 <p>Thiago Barbosa</p>
                 <p>3185934</p>
-                <p><a href="mailto:thiago.dasilvabarbosa@student.griffith.ie">Email Me</a></p>
+                <p>
+                    <a href="mailto:thiago.dasilvabarbosa@student.griffith.ie">
+                        Email Me
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
+                            <path
+                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
+                            <path
+                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
+                        </svg>
+                    </a>
+                </p>
             </div>
 
             <div>
                 <p>Austine Biketi</p>
                 <p>3178096</p>
-                <p><a href="mailto:austinebiketi.naulikha@student.griffith.ie">Email Me</a></p>
+                <p>
+                    <a href="mailto:austinebiketi.naulikha@student.griffith.ie">
+                        Email Me
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
+                            <path
+                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
+                            <path
+                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
+                        </svg>
+                    </a>
+                </p>
             </div>
         </footer>
     </div>
