Initialize about page

--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -20,8 +20,8 @@
                     <li><a href="#"><span>News</span></a></li>
                     <li><a href="#"><span>Genres</span></a></li>
                     <li><a href="#"><span>Events</span></a></li>
-                    <li><a href="#"><span>About</span></a></li>
-                    <li><a href="#"><span>Developers</span></a></li>
+                    <li><a href="./about.html"><span>About</span></a></li>
+                    <li><a href="./developers.html"><span>Developers</span></a></li>
                     <li><a href="#"><span>Contact Us</span></a></li>
                     <li><a href="#"><span>References</span></a></li>
                 </ul>
@@ -40,7 +40,7 @@
             <div id="intro">
                 <h1 class="welcome-heading">Welcome to ETA Gaming</h1>
                 <blockquote>
-                    <p class="welcome-tagline">Where every click begins a quest</p>
+                    <p class="welcome-tagline">"Where every click begins a quest"</p>
                 </blockquote>
             </div>
         </main>
@@ -48,7 +48,7 @@
         <footer id="footer">
             <div class="eta-footer">
                 <br><br><br><br>
-                <p>&copy;ETA Gaming</p>
+                <p>&copy;2025 ETA Gaming, Inc. All rights Reserved</p>
             </div>
 
             <div>
