genre page started adapting to the last changes

--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -17,10 +17,10 @@
             <p>ETA Gaming</p>
             <nav>
                 <ul>
-                    <li><a href="#">Genres</a></li>
+                    <li><a href="genre.html">Genres</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Developers</a></li>
+                    <li><a href="developer.html">Developers</a></li>
                     <li><a href="#">News</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">References</a></li>
