Base files for news section with code

--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -27,7 +27,7 @@
                     <li><a href="#"><span>GENRES</span></a></li>
                     <li><a href="#"><span>EVENTS</span></a></li>
                     <li><a href="./about.html"><span>ABOUT</span></a></li>
-                    <li><a href="#"><span>NEWS</span></a></li>
+                    <li><a href="./news.html"><span>NEWS</span></a></li>
                     <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
                     <li><a href="#"><span>SUPPORT</span></a></li>
                     <li><a href="#"><span>REFERENCES</span></a></li>
@@ -62,10 +62,10 @@
                     <p>EMMANUEL</p>
                 </div>
                 <div class="footer-socials">
-                    <a href="#"><img src="../images/facebook-app-symbol.png" alt="Facebook"></a>
-                    <a href="#"><img src="../images/twitter-black-shape.png" alt="Twitter"></a>
-                    <a href="#"><img src="../images/youtube.png" alt="YouTube"></a>
-                    <a href="#"><img src="../images/twitch.png" alt="Twitch"></a>
+                    <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
+                    <a href="#"><img src="../icons/twitter-black-shape.png" alt="Twitter"></a>
+                    <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
+                    <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
                  </div>
                 <!-- <div class="footer-divider"></div> -->
                 <div class="footer-bottom-right">
