carousel functionally working and text appearing accordingly. Waiting for further design updates

--- a/Assignment_4/html/genre.html
+++ b/Assignment_4/html/genre.html
@@ -37,49 +37,59 @@
     <div class="genre-container">
         <main id="genre">
             <section class="genre-information">
-                <h2>Challenge your creativity</h2>
-                <p>Game genres are categories that describe the style of gameplay a video game offers. They help players understand what kind of experience 
-                    to expect — such as fast-paced action, deep storytelling, problem-solving, or strategic thinking.</p>
-                <h2>Our mission is to help you navigate within this universe</h2>
+                <div class="wrapper">
+                    <div class="hidden-information">
+                        <h2>Challenge your creativity</h2>
+                    </div>
+                    <div class="hidden-right">
+                        <p>Game genres are categories that describe the style of gameplay a video game offers. They help players understand what kind of experience 
+                        to expect — such as fast-paced action, deep storytelling, problem-solving, or strategic thinking.</p>
+                    </div>
+                </div>
+                <div class="hidden-information2">
+                    <h2>We help you navigate in this universe</h2>
+                </div>
             </section>
-            
+
+
             <div class="genre-gamecards">
-                <div class="genre-adventure">
-                    <h3>Story-driven games focused on exploration and puzzle-solving.</h3>
-                    <section class="adventure-gamecard">
-                        <aside class="zelda">
-                            <img src="/images/genres/gameCards/adventure/zelda.webp" alt="zelda">
+                <section class="genre-adventure">
+                    <h3 class="hidden">Story-driven games focused on exploration and puzzle-solving.</h3>
+                    <div class="adventure-gamecard" id="adventure-gamecard">
+                        <aside class="adventure-carousel">
+                            <img src="/images/genres/gameCards/adventure/" alt="zelda">
                             <p>Explore vast lands, solve puzzles, and battle enemies in a fantasy world.</p>
                         </aside>
-                        <aside class="uncharted">
+                        <aside class="adventure-carousel">
                             <img src="/images/genres/gameCards/adventure/uncharted.webp" alt="uncharted">
                             <p> A cinematic, story-rich game with exploration, platforming, and gunplay.</p>
                         </aside>
-                        <aside class="tomb-raider">
+                        <aside class="adventure-carousel">
                             <img src="/images/genres/gameCards/adventure/tombRaider.webp" alt="tombRaider">
                             <p>A gritty reboot with exploration, survival mechanics, and puzzle tombs.</p>
                         </aside>
-                        <aside class="assassins">
+                        <aside class="adventure-carousel">
                             <img src="/images/genres/gameCards/adventure/assassins.webp" alt="assassinsCreed">
                             <p>Combines stealth, combat, and player choice in ancient Greece.</p>
                         </aside>
-                        <aside class="red-dead-redemption">
+                        <aside class="adventure-carousel">
                             <img src="/images/genres/gameCards/adventure/redDead.webp" alt="redDeadRedemption">
                             <p>A Western epic with realistic world-building, exploration, and story-driven missions.</p>
                         </aside>
-                        <aside class="batman">
+                        <aside class="adventure-carousel">
                             <img src="/images/genres/gameCards/adventure/batman.webp" alt="batman">
                             <p>Play as Batman in a semi-open world, using stealth, gadgets, and combat.</p>
                         </aside>
-                        <aside class="god-of-war">
+                        <aside class="adventure-carousel">
                             <img src="/images/genres/gameCards/adventure/godOfWar.webp" alt="godOfWar">
                             <p>A mythological journey focused on storytelling, exploration, and intense combat.</p>
                         </aside>
-                    </section>
-                </div>
-                <div class="genre-simulation">
-                    <h3>Realistic games that mimic real-life activities or systems.</h3>
-                    <section class="simulation-gamecard">
+                    </div>
+                </section>
+
+                <section class="genre-simulation">
+                    <h3 class="hidden">Realistic games that mimic real-life activities or systems.</h3>
+                    <div class="simulation-gamecard">
                         <aside class="the-sims">
                             <img src="/images/genres/gameCards/simulation/sims.jpg" alt="theSims4">
                             <p>Create and control people in a virtual world filled with daily life simulation.</p>
@@ -108,12 +118,12 @@
                             <img src="/images/genres/gameCards/simulation/kerbal.webp" alt="kerbal-space-program">
                             <p>Design rockets and explore space with quirky green astronauts.</p>
                         </aside>
-                    </section>
-                </div>
+                    </div>
+                </section>
 
-                <div class="genre-rpg">
-                    <h3>Games that involve character development, quests, and narrative choices.</h3>
-                    <section class="rpg-gamecard">
+                <section class="genre-rpg">
+                    <h3 class="hidden">Games that involve character development, quests, and narrative choices.</h3>
+                    <div class="rpg-gamecard">
                         <aside class="the-witcher">
                             <img src="/images/genres/gameCards/rpg/witcher.webp" alt="theWitcher">
                             <p>Embark on an epic journey as Geralt of Rivia in a dark, story-rich fantasy world.</p>
@@ -142,12 +152,12 @@
                             <img src="/images/genres/gameCards/rpg/dragonAge.webp" alt="dragonAge">
                             <p>Lead a team of heroes to save a war-torn world full of magic and political intrigue.</p>
                         </aside>
-                    </section>
-                </div>
+                    </div>
+                </section>
 
-                <div class="genre-sports">
-                    <h3>Games that replicate traditional sports like football, basketball, or racing.</h3>
-                    <section class="sports-gamecard">
+                <section class="genre-sports">
+                    <h3 class="hidden">Games that replicate traditional sports like football, basketball, or racing.</h3>
+                    <div class="sports-gamecard">
                         <aside class="fifa">
                             <img src="/images/genres/gameCards/sports/fifa.webp" alt="fifa24">
                             <p>Play realistic football matches with your favorite teams and players.</p>
@@ -176,12 +186,12 @@
                             <img src="/images/genres/gameCards/sports/mlb.webp" alt="MLB">
                             <p>Hit, pitch, and field in a realistic baseball simulation.</p>
                         </aside>
-                    </section>
-                </div>
+                    </div>
+                </section>
 
-                <div class="genre-horror">
-                    <h3>Games designed to scare or thrill, often with dark settings and limited resources.</h3>
-                    <section class="horror-gamecard">
+                <section class="genre-horror">
+                    <h3 class="hidden">Games designed to scare or thrill, often with dark settings and limited resources.</h3>
+                    <div class="horror-gamecard">
                         <aside class="resident-evil">
                             <img src="/images/genres/gameCards/horror/residentEvil.webp" alt="residentEvil4">
                             <p>Survive intense horror and action while rescuing the president’s daughter.</p>
@@ -210,12 +220,12 @@
                             <img src="/images/genres/gameCards/horror/phasmophobia.webp" alt="phasmophobia">
                             <p>Team up with friends to investigate haunted locations and identify ghosts.</p>
                         </aside>
-                    </section>
-                </div>
+                    </div>
+                </section>
 
-                <div class="genre-strategy">
-                    <h3>Games that require planning and tactical thinking to achieve victory.</h3>
-                    <section class="strategy-gamecard">
+                <section class="genre-strategy">
+                    <h3 class="hidden">Games that require planning and tactical thinking to achieve victory.</h3>
+                    <div class="strategy-gamecard">
                         <aside class="civilization">
                             <img src="/images/genres/gameCards/strategy/civilization.webp" alt="civilization">
                             <p>Build an empire and lead it from ancient times to the modern era.</p>
@@ -244,8 +254,8 @@
                             <img src="/images/genres/gameCards/strategy/lol.webp" alt="leagueOfLegends">
                             <p>Compete in team-based battles with unique champions and tactical depth.</p>
                         </aside>
-                    </section>
-                </div>
+                    </div>
+                </section>
             </div>
         </main>
     </div>
@@ -272,7 +282,7 @@
             <p>3178096</p>
             <p><a href="mailto:austinebiketi.naulikha@student.griffith.ie">Email Me</a></p>
         </div>
-    </footer>
+    </footer>    
 </body>
 
 </html>
