--- a/Assignment_4/html/developer.html
+++ b/Assignment_4/html/developer.html
@@ -27,9 +27,17 @@
             </nav>
         </header>
     </div>
-    
 
-     <footer id="footer">
+    <div class="card-container">
+        <div class="card">
+            <h2>Austine</h2>
+            <img src="/images/developers/austine/WhatsApp Image 2025-07-14 at 14.49.07.jpeg">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sit amet posuere augue, quis dictum urna. Nullam nisi mauris, tristique ut varius quis, viverra venenatis ipsum. Nam vulputate nunc posuere magna cursus finibus. Vivamus tempus lorem diam, a venenatis metus blandit ut. Donec luctus sagittis ligula, a mollis erat semper vel. Ut vestibulum tincidunt vehicula. Aliquam erat volutpat. Curabitur laoreet molestie tellus quis imperdiet. In suscipit felis quis dolor suscipit, quis volutpat arcu accumsan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In semper leo erat, sed feugiat magna semper quis. Nulla facilisi. Morbi vitae magna justo. Integer dictum neque sit amet lectus congue accumsan.</p>
+            <button onclick="">Button</button>
+        </div>
+    </div>
+
+        <footer id="footer">
         <div>
             <p>&copy;ETA Gaming</p>
         </div>
@@ -52,5 +60,6 @@
             <p><a href="mailto:austinebiketi.naulikha@student.griffith.ie">Email Me</a></p>
         </div>
     </footer>
+    </div>
 </body>
 </html>
