Replace icons and update styling for popular news

--- a/Assignment_4/html/news.html
+++ b/Assignment_4/html/news.html
@@ -51,6 +51,8 @@
                     <img src="../images/marvel-rivals-wq3mr.png" class="slide active" />
                     <img src="../images/stanislav-klabik-final-view-01-final.jpg" class="slide" />
                     <img src="../images/EA-FC-25-Premier-League-POTM-.avif" class="slide" />
+                    <img src="../images/stanislav-klabik-final-view-01-final.jpg" class="slide" />
+                    <img src="../images/EA-FC-25-Premier-League-POTM-.avif" class="slide" />
                 </div>
 
                 <!-- Right Arrow -->
