Update news section positioning and actual news paragraphs

--- a/Assignment_4/html/news.html
+++ b/Assignment_4/html/news.html
@@ -48,7 +48,7 @@
 
                 <!-- Slides -->
                 <div class="slides">
-                    <img src="../images/marvel-rivals-wq3mr.png" class="slide active" />
+                    <img src="../images/marvel-rivals-wq3mr.png" class="slide" />
                     <img src="../images/stanislav-klabik-final-view-01-final.jpg" class="slide" />
                     <img src="../images/EA-FC-25-Premier-League-POTM-.avif" class="slide" />
                     <img src="../images/stanislav-klabik-final-view-01-final.jpg" class="slide" />
@@ -59,11 +59,13 @@
                 <button class="arrow right">&gt;</button>
 
                 <!-- Dots -->
-                <div class="dots">
+                <!-- <div class="dots">
                     <span class="dot active"></span>
                     <span class="dot"></span>
                     <span class="dot"></span>
-                </div>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div> -->
             </div>
         </div>
 
@@ -99,6 +101,15 @@
             <div class="news-card">
                 <img src="thumbnail.jpg" alt="News Thumbnail">
                 <div class="news-content">
+                    <h3>PEAK Patch v1.8</h3>
+                    <p>Hey scouts! We got another update for ya. This one is mostly targeted at stability and quality of life, but we did throw in a little morsel of content with the "Flying Disc" and Binoculars you can find at the crash site. Thank you to the beta testers for helping us get this patch out quickly!</p>
+                    <span class="date">Mon, July 21</span>
+                </div>
+            </div>
+
+            <div class="news-card">
+                <img src="thumbnail.jpg" alt="News Thumbnail">
+                <div class="news-content">
                     <h3>Title of the News</h3>
                     <p>Brief summary of the news story goes here...</p>
                     <span class="date">July 19, 2025</span>
@@ -110,6 +121,43 @@
                 <div class="news-content">
                     <h3>Title of the News</h3>
                     <p>Brief summary of the news story goes here...</p>
+                    <span class="date">July 19, 2025</span>
+                </div>
+            </div>
+
+            <div class="news-card">
+                <img src="thumbnail.jpg" alt="News Thumbnail">
+                <div class="news-content">
+                    <h3>Title of the News</h3>
+                    <p>Brief summary of the news story goes here...</p>
+                    <span class="date">July 19, 2025</span>
+                </div>
+            </div>
+
+            <div class="news-card">
+                <img src="thumbnail.jpg" alt="News Thumbnail">
+                <div class="news-content">
+                    <h3>Title of the News</h3>
+                    <p>Brief summary of the news story goes here...</p>
+                    <span class="date">July 19, 2025</span>
+                </div>
+            </div>
+
+            <div class="news-card">
+                <img src="thumbnail.jpg" alt="News Thumbnail">
+                <div class="news-content">
+                    <h3>Title of the News</h3>
+                    <p>Brief summary of the news story goes here...</p>
+                    <span class="date">July 19, 2025</span>
+                </div>
+            </div>
+
+            <div class="news-card">
+                <img src="thumbnail.jpg" alt="News Thumbnail">
+                <div class="news-content">
+                    <h3>Warframe: Valkyr Heirloom Available Now</h3>
+                    <p>Valkyr Heirloom rises in splendor, casting off her legacy of torment in a brand new Heirloom Collection that features an Heirloom Skin, Signa, Color Palette and much more. This collection is available to add to your Arsenal today!
+                    </p>
                     <span class="date">July 19, 2025</span>
                 </div>
             </div>
@@ -126,34 +174,38 @@
     </section>
 
     <!-- footer section -->
-    <footer id="footer">
-        <div class="footer-logo">
-            <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
-        </div>
-        <div class="footer-names">
-            <p>AUSTINE</p>
-            <p>THIAGO</p>
-            <p>EMMANUEL</p>
-        </div>
-        <div class="footer-socials">
-            <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
-            <a href="#"><img src="../icons/twitter-black-shape.png" alt="Twitter"></a>
-            <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
-            <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
-        </div>
-        <!-- <div class="footer-divider"></div> -->
-        <div class="footer-bottom-right">
-        <!-- <p>&copy; All Rights Reserved @ETAGAMING</p> -->
-            <div class="footer-links">
-                <a href="#">PRIVACY POLICY</a>
-                <a href="#">TERMS OF SERVICES</a>
-                <a href="#">CODE OF CONDUCT</a>
+    <section>
+        <footer id="footer">
+            <div class="footer-logo">
+                <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
             </div>
-        </div>
-        <div class="footer-bottom-left">
-            <p>&copy; All Rights Reserved @ETAGAMING</p>
-        </div>
-    </footer>
+            <div class="footer-names">
+                <p>AUSTINE</p>
+                <p>THIAGO</p>
+                <p>EMMANUEL</p>
+            </div>
+            <div class="footer-socials">
+                <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
+                <a href="#"><img src="../icons/twitter-black-shape.png" alt="Twitter"></a>
+                <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
+            </div>
+            <!-- <div class="footer-divider"></div> -->
+            <div class="footer-bottom-right">
+            <!-- <p>&copy; All Rights Reserved @ETAGAMING</p> -->
+                <div class="footer-links">
+                    <a href="#">PRIVACY POLICY</a>
+                    <a href="#">TERMS OF SERVICES</a>
+                    <a href="#">CODE OF CONDUCT</a>
+                </div>
+            </div>
+            <div class="footer-bottom-left">
+                <p>&copy; All Rights Reserved @ETAGAMING</p>
+            </div>
+        </footer>
+    </section>
+    <script src="../js/main.js"></script>
     <script src="../js/news.js"></script>
+    
 </body>
 </html>
