Set up files for genres

--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -24,7 +24,7 @@
                 </div>
                 <ul class="nav-links" id="nav-links">
                     <li><a href="./"><span>HOME</span></a></li>
-                    <li><a href="#"><span>GENRES</span></a></li>
+                    <li><a href="./genres.html"><span>GENRES</span></a></li>
                     <li><a href="#"><span>EVENTS</span></a></li>
                     <li><a href="./about.html"><span>ABOUT</span></a></li>
                     <li><a href="./news.html"><span>NEWS</span></a></li>
