--- a/Assignment_4/html/genres.html
+++ b/Assignment_4/html/genres.html
@@ -49,6 +49,79 @@
             </div>
         </section>
 
+
+        <section id="action-section" class="genre-section">
+            <div class="genre-text">
+                <h2>ACTION</h2>
+                <p>Explore adrenaline-pumping titles with fast-paced combat, breathtaking stunts, and explosive sequences.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="../images/Batman.jpg" alt="">
+                <img src="../images/callofduty.jpg" alt="">
+                <img src="../images/forza.jpg" alt="">
+                </div>
+            </div>
+            </section>
+
+            <section id="racing-section" class="genre-section">
+            <div class="genre-text">
+                <h2>RACING</h2>
+                <p>Speed into high-octane challenges, realistic driving experiences, and competitive racing action.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="https://images.unsplash.com/photo-1615038774821-524c8c35ed8b?auto=format&fit=crop&w=800" alt="">
+                <img src="https://images.unsplash.com/photo-1606669819929-070b2f9d4517?auto=format&fit=crop&w=800" alt="">
+                <img src="https://images.unsplash.com/photo-1503736334956-4c8f8e92946d?auto=format&fit=crop&w=800" alt="">
+                </div>
+            </div>
+            </section>
+
+            <section id="adventure-section" class="genre-section">
+            <div class="genre-text">
+                <h2>ADVENTURE</h2>
+                <p>Embark on immersive journeys with compelling stories and rich, open worlds waiting to be explored.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="https://cdn1.epicgames.com/offer/9b8d181f6e2b467caf5ebd6c355c4f3e/EGS_UNCHARTEDLegacyOfThievesCollection_NaughtyDog_S1_2560x1440-1b3e01c3aa754f86ecdbdf46bb2a2b0a" alt="">
+                <img src="https://images.unsplash.com/photo-1598550464304-8b02c3ae3b3a?auto=format&fit=crop&w=800" alt="">
+                <img src="https://images.unsplash.com/photo-1616264227937-774e94b09748?auto=format&fit=crop&w=800" alt="">
+                </div>
+            </div>
+            </section>
+
+            <section id="horror-section" class="genre-section">
+            <div class="genre-text">
+                <h2>HORROR</h2>
+                <p>Dive into terrifying experiences where survival, atmosphere, and fear reign supreme.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="https://images.unsplash.com/photo-1622452735143-f0677ebd85ad?auto=format&fit=crop&w=800" alt="">
+                <img src="https://images.unsplash.com/photo-1601758124122-5c8f4e5b2c11?auto=format&fit=crop&w=800" alt="">
+                <img src="https://images.unsplash.com/photo-1503602642458-232111445657?auto=format&fit=crop&w=800" alt="">
+                </div>
+            </div>
+            </section>
+
+            <section id="sci-fi-section" class="genre-section">
+            <div class="genre-text">
+                <h2>SCI-FI</h2>
+                <p>Step into futuristic universes, alien worlds, and interstellar adventures filled with high-tech marvels.</p>
+            </div>
+            <div class="genre-gallery">
+                <div class="gallery-track">
+                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1938090/capsule_616x353.jpg" alt="">
+                <img src="https://images.unsplash.com/photo-1638376315983-d29de4f01b9f?auto=format&fit=crop&w=800" alt="">
+                <img src="https://images.unsplash.com/photo-1631190702213-4fc4cb832377?auto=format&fit=crop&w=800" alt="">
+                </div>
+            </div>
+            </section>
+
+
+
         <footer id="footer">
             <div class="footer-logo">
                 <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
