Modify home and about

--- a/Assignment_4/html/about.html
+++ b/Assignment_4/html/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ETA Gaming</title>
     <link rel="stylesheet" href="../css/about.css">
+    <link rel="icon" type="image/png" href="../images/home-page-icon.png">
     <script src="https://unpkg.com/three@0.121.1/build/three.min.js"></script>
     <script src="https://unpkg.com/globe.gl"></script>
     <script src="../js/about.js" defer></script>
