--- a/Assignment_4/html/about.html
+++ b/Assignment_4/html/about.html
@@ -18,15 +18,21 @@
                 <img src="../images/home-page-icon.png" class="home-page-icon" alt="ETA Logo">
             </a>
             <p>ETA Gaming</p>
-            <nav>
-                <ul>
-                    <li><a href="#"><span>News</span></a></li>
-                    <li><a href="#"><span>Genres</span></a></li>
-                    <li><a href="#"><span>Events</span></a></li>
-                    <li><a href="./about.html"><span>About</span></a></li>
-                    <li><a href="./developers.html"><span>Developers</span></a></li>
-                    <li><a href="#"><span>Contact Us</span></a></li>
-                    <li><a href="#"><span>References</span></a></li>
+            <nav class="navbar">
+                <div class="hamburger" id="hamburger">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+                <ul class="nav-links" id="nav-links">
+                    <li><a href="./"><span>HOME</span></a></li>
+                    <li><a href="./genres.html"><span>GENRES</span></a></li>
+                    <li><a href="#"><span>EVENTS</span></a></li>
+                    <li><a href="./about.html"><span>ABOUT</span></a></li>
+                    <li><a href="./news.html"><span>NEWS</span></a></li>
+                    <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
+                    <li><a href="#"><span>SUPPORT</span></a></li>
+                    <li><a href="#"><span>REFERENCES</span></a></li>
                 </ul>
             </nav>
         </header>
@@ -142,57 +148,31 @@
         </main>
 
         <footer id="footer">
-            <div class="eta-footer">
-                <br><br><br><br>
-                <p>&copy;2025 ETA Gaming, Inc. All rights Reserved</p>
+            <div class="footer-logo">
+                <img src="../images/home-page-icon.png" alt="ETA GAMING Logo">
             </div>
-
-            <div>
-                <p>Emmanuel Ayobanjo</p>
-                <p>3173959</p>
-                <p>
-                    <a href="mailto:emmanuelayomikun.ayobanjo@student.griffith.ie">
-                        Email Me
-                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
-                            <path
-                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
-                        </svg>
-                    </a>
-                </p>
+            <div class="footer-names">
+                <p>AUSTINE</p>
+                <p>THIAGO</p>
+                <p>EMMANUEL</p>
             </div>
-
-            <div>
-                <p>Thiago Barbosa</p>
-                <p>3185934</p>
-                <p>
-                    <a href="mailto:thiago.dasilvabarbosa@student.griffith.ie">
-                        Email Me
-                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
-                            <path
-                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
-                        </svg>
-                    </a>
-                </p>
+            <div class="footer-socials">
+                <a href="#"><img src="../icons/facebook-app-symbol.png" alt="Facebook"></a>
+                <a href="#"><img src="../icons/twitter-black-shape.png" alt="Twitter"></a>
+                <a href="#"><img src="../icons/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="../icons/twitch.png" alt="Twitch"></a>
             </div>
-
-            <div>
-                <p>Austine Biketi</p>
-                <p>3178096</p>
-                <p>
-                    <a href="mailto:austinebiketi.naulikha@student.griffith.ie">
-                        Email Me
-                        <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-envelope-arrow-up" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4.5a.5.5 0 0 1-1 0V5.383l-7 4.2-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h5.5a.5.5 0 0 1 0 1H2a2 2 0 0 1-2-1.99zm1 7.105 4.708-2.897L1 5.383zM1 4v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1" />
-                            <path
-                                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.354 1.25 1.25a.5.5 0 0 1-.708.708L13 12.207V14a.5.5 0 0 1-1 0v-1.717l-.28.305a.5.5 0 0 1-.737-.676l1.149-1.25a.5.5 0 0 1 .722-.016" />
-                        </svg>
-                    </a>
-                </p>
+            <!-- <div class="footer-divider"></div> -->
+            <div class="footer-bottom-right">
+                <!-- <p>&copy; All Rights Reserved @ETAGAMING</p> -->
+                <div class="footer-links">
+                    <a href="#">PRIVACY POLICY</a>
+                    <a href="#">TERMS OF SERVICES</a>
+                    <a href="#">CODE OF CONDUCT</a>
+                </div>
+            </div>
+            <div class="footer-bottom-left">
+                <p>&copy; All Rights Reserved @ETAGAMING</p>
             </div>
         </footer>
     </div>
