--- a/Assignment_4/html/genre.html
+++ b/Assignment_4/html/genre.html
@@ -57,7 +57,7 @@
                     <h3 class="hidden">Story-driven games focused on exploration and puzzle-solving.</h3>
                     <div class="adventure-gamecard" id="adventure-gamecard">
                         <aside class="adventure-carousel">
-                            <img src="/images/genres/gameCards/adventure/" alt="zelda">
+                            <img src="/images/genres/gameCards/adventure/zelda.webp" alt="zelda">
                             <p>Explore vast lands, solve puzzles, and battle enemies in a fantasy world.</p>
                         </aside>
                         <aside class="adventure-carousel">
