--- a/Assignment_4/html/home.html
+++ b/Assignment_4/html/home.html
@@ -29,7 +29,7 @@
                     <li><a href="./about.html"><span>ABOUT</span></a></li>
                     <li><a href="./news.html"><span>NEWS</span></a></li>
                     <li><a href="./developers.html"><span>DEVELOPERS</span></a></li>
-                    <li><a href="#"><span>SUPPORT</span></a></li>
+                    <li><a href="./support.html"><span>SUPPORT</span></a></li>
                     <li><a href="#"><span>REFERENCES</span></a></li>
                 </ul>
             </nav>
